--- a/client/src/assets/Login.css
+++ b/client/src/assets/Login.css
@@ -12,7 +12,7 @@ height:100vh;
 
 .left{
 width:50%;
-background-image:url("C:/Users/fady/Downloads/ChatGPT Image 26 فبراير 2026، 04_13_28 م.png");
+background-image:url("./Background.png");
 background-size:cover;
 background-position:left center;
 background-repeat: no-repeat;
