--- a/client/src/assets/Login.css
+++ b/client/src/assets/Login.css
@@ -5,14 +5,14 @@ box-sizing:border-box;
 font-family:Arial, Helvetica, sans-serif;
 }
 
-body{
-display:flex;
-height:100vh;
+.container {
+  display: flex;
+  height: 100vh;
 }
 
 .left{
 width:50%;
-background-image:url("./Background.png");
+background-image: url("../assets/Background.png");
 background-size:cover;
 background-position:left center;
 background-repeat: no-repeat;
